public/stylesheets/style.css
html {
  --first-color: #fff;
  --first-color-transparent: #ffffff00;
  --first-color-light: #ccc;
  --second-color: #FF8000;
  --third-color: #FFCF75;

  --first-background: #333;
  --first-background-light: #444;
  --first-background-light-transparent: #44444400;

  --nav-height: 64px;
}

body {
  padding: 0;
  margin: 0;

  background-color: #000000;

  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
}

a {
  text-decoration: underline dotted 1px;
}

nav {
  z-index: 200;

  position: sticky;
  top: 0;

  display: flex;
  padding: 0 16px;

  height: var(--nav-height);

  background-color: transparent;
  justify-content: flex-end;
  align-items: center;

  color: var(--first-color);

  font-size: 1.5em;
  font-weight: bold;
  text-transform: uppercase;

  text-shadow: 0 0 4px #00000066;
}

nav a {
  padding: 0 16px 0 16px;
  text-decoration: none;
}

nav a,
nav a:hover {
  color: var(--first-color);
}

h1 {
  color: var(--first-color);
}

h2 {
  color: var(--second-color);
  ;
}

a {
  color: var(--third-color);
}

/*  */
/*HEADER SPLASH*/
/*  */
header {
  position: relative;
  overflow: hidden;

  display: flex;

  height: 100vh;

  top: calc(0vh - var(--nav-height));
}

.splash-parallax {
  position: absolute;
  inset: 0;
  /* overflow: hidden;
  height: 100vh; */
}

.splash-background {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-image: url("../img/splash_anime_food_2048x1152.jpg");
  background-repeat: no-repeat;
  background-size: cover;
  transform: translateZ(-1px) scale(1.1);
  z-index: -100;
}

.splash-content {
  position: relative;
  z-index: 1;

  /* margin: 5% 5% 0 5%; */
  margin: auto;
  /* top: -2vw; */

  width: 38%;

  color: var(--first-color);

  /* background-color: rgb(0 0 0 / 50%); */

  display: flex;
  flex-direction: column;
}

.splash-content,
.splash-content * {
  transition: 350ms;
}

.splash-content h1 {
  /* position: relative; */
  position: absolute;

  margin: 0 0 0 -0.05em;
  /* margin-top: -0.88em; */
  /* margin-top: -7vw; */

  /* width: 5em; */
  font-size: 8vw;

  -webkit-text-stroke-width: 1px;
  -webkit-text-stroke-color: var(--first-color);

  color: transparent;
  text-shadow: none;

  -webkit-mask-image: linear-gradient(to bottom, black 15%, transparent 45%);
  mask-image: linear-gradient(to bottom, black 15%, transparent 45%);
}

.splash-content h1:last-of-type {
  position: relative;
  margin-top: 0;
  margin-bottom: -0.2em;

  color: var(--first-color);
  text-shadow: 0 0 16px rgba(0 0 0 / 30%);

  -webkit-mask-image: none;
  mask-image: none;

  /* float: initial; */
}

.splash-content h2 {
  font-size: 2.3vw;

  color: var(--first-color);

  text-shadow: 0 0 8px rgba(0 0 0 / 50%);

  /* float: left;
  clear: left; */
}

/*  */
/* SEARCH BAR SEARCH-BAR SEARCHBAR */
/*  */
.search-form {
  position: relative;
}

.search-form input[type="text"] {
  width: calc(100% - 2em - 4px);
  height: 2em;

  padding: 0 2em 0 4px;

  border: none;

  background-color: var(--first-background-light);

  font-size: 1.3em;

  color: #ccc;
  caret-color: #ccc;

  filter: drop-shadow(0 0 8px rgba(0 0 0 / 20%));
}

.search-form input[type="text"]:focus {
  background-color: var(--first-background);

  border: none;
  outline: none;

  filter: drop-shadow(0 0 4px rgba(0 0 0 / 50%));
}

.search-form input[type="text"]::placeholder {
  color: var(--first-color-light);
}

.search-form button[type="submit"] {
  position: absolute;
  top: 50%;
  transform: translate(0, -50%);
  right: 4px;
  width: 2em;
  height: 2em;
  padding: 0;
  border: none;

  background-color: transparent;
  background-image: url("../img/search_white.svg");
  background-repeat: no-repeat;

  opacity: 0.7;

  outline: none;
  cursor: pointer;
}

.fa-search {
  color: #555;
  font-size: 20px;
}

/*  */
/* SPLASH FEATURED */
/*  */
.splash-featured {
  --featured-nav-height: 20px;
  --featured-title-height: calc(25% - var(--featured-nav-height));
  --featured-content-height: calc(100% - var(--featured-title-height) - var(--featured-nav-height));

  position: relative;

  /* margin: 12% 2% 0 10%; */
  margin: auto;
  /* top: 3.5vw; */

  max-width: 40%;
  height: 50vh;
  min-height: 25vw;

  background-color: var(--first-color);
  color: var(--first-color);

  border-radius: 20px 0;
  overflow: hidden;

  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
}

.featured-title {
  display: flex;
  justify-content: center;
  align-items: center;

  height: var(--featured-title-height);

  background-color: var(--first-background);
}

.featured-title.waiting,
.featured-content.waiting {
  animation-name: featured-waiting;
  animation-duration: 1s;
  animation-direction: alternate;
  animation-iteration-count: infinite;
  animation-timing-function: ease-in-out;
}

.featured-title h3 {
  margin: 0 0 0 0;

  font-size: 2em;

  /* animation-name: featured-text-transition-out;
  animation-duration: 1s;
  animation-iteration-count: infinite; */
}

.featured-title h3.animation-in::after,
.featured-title h3.animation-out::after {
  content: '';
  position: absolute;
  display: block;
  background-color: var(--first-background);

  width: 100%;
  height: var(--featured-title-height);

  top: 0;
  left: 0;
  transform: skew(225deg) translate(-100%, 0%);

  animation-duration: 1s;
  animation-fill-mode: forwards;
}

.featured-title h3.animation-in::after {
  animation-name: featured-text-transition-out;
}

.featured-title h3.animation-out::after {
  animation-name: featured-text-transition-in;
}

.featured-content {
  display: flex;
  flex-wrap: wrap;

  overflow: hidden;

  height: var(--featured-content-height);

  background-color: var(--first-background-light);
}

.featured-text {
  width: 50%;

  font-size: 1.2em;
}

.featured-text p {
  padding: 0 8px;
}

.featured-text a {
  z-index: 102;
  position: absolute;

  margin: auto;
  bottom: calc(0.1em + var(--featured-nav-height));

  left: 25%;
  transform: translateX(-50%);

  text-decoration: none;
  text-shadow: 0 0 8px var(--first-background-light);
}

.featured-text::after {
  z-index: 101;
  content: '';

  position: absolute;
  top: var(--featured-title-height);

  width: 50%;
  height: var(--featured-content-height);

  background: transparent;
  background: linear-gradient(0deg, var(--first-background-light) 5%,
      var(--first-background-light-transparent) 25%);
}

.featured-side {
  width: 50%;
  height: 100%;

  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  /* align-items: center; */
  overflow: hidden;
}

.featured-side .featured-img {
  display: flex;
  height: 75%;

  overflow: hidden;
  border-radius: 0 0 0 20px;
}

.featured-side img {
  z-index: 100;
  position: relative;
  flex-shrink: 0;

  width: 100%;

  object-fit: cover;
}

.featured-side .img-overlay {
  z-index: 102;
  display: block;

  position: relative;
  flex-shrink: 0;

  width: 300%;

  background-color: black;
  transform: skew(135deg) translate(-150%, 0%);
}

.featured-side .img-overlay.animation-in,
.featured-side .img-overlay.animation-out {
  display: block;
  animation-duration: 1s;
  animation-fill-mode: forwards;
}

.featured-side .img-overlay.animation-in {
  animation-name: featured-img-transition-in;
}

.featured-side .img-overlay.animation-out {
  animation-name: featured-img-transition-out;
}

.featured-stars {
  /* width: 100%; */
  height: 12.5%;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.featured-stars .star-rating {
  position: relative;

  flex: 1;
  text-align: center;

  text-wrap: nowrap;

  font-size: 2.5vw;

  -webkit-text-stroke-width: 0.8px;
  -webkit-text-stroke-color: var(--first-color);
  color: transparent;

  background-color: var(--first-background-light);
  background-size: 100%;

  background-clip: text;
  -webkit-background-clip: text;
  -moz-background-clip: text;

  -webkit-text-fill-color: transparent;
  -moz-text-fill-color: transparent;

  cursor: pointer;
}

.star-rating::before {
  opacity: 0;

  content: attr(data-content);

  position: absolute;
  left: 50%;
  transform: translate(-50%, -100%);

  background-color: var(--second-color);

  padding: 2px 16px;
  border-radius: 16px;

  color: var(--first-color);

  background-clip: unset;
  -webkit-background-clip: unset;
  -moz-background-clip: unset;

  -webkit-text-fill-color: var(--first-color);
  -moz-text-fill-color: var(--first-color);

  transition: 200ms;
}

.star-rating:hover::before {
  opacity: 1;
}

.featured-stars .featured-ratings {
  font-size: 1em;
  padding-right: 8px;
  text-align: center;

  font-size: 1em;

  width: 25%;
}

.featured-nav {
  width: 100%;
  height: var(--featured-nav-height);

  background-color: var(--first-background);
}

.featured-nav-buttons {
  display: flex;
  justify-content: space-between;
  align-items: center;

  margin-left: 25%;
  width: 50%;
}

.featured-nav a {
  flex: 1;
  text-align: center;

  font-size: 1.2em;
  text-decoration: none;

  color: var(--first-color);

  /* text-shadow: 0 0 4px rgba(0 0 0 / 90%); */
}

/*  */
/* ANIMATIONS */
/*  */

@keyframes slide-outside-from-right {
  from {
    right: 0%;
  }

  to {
    right: -200%;
  }
}


/* featured transitions */

@keyframes featured-text-transition-out {
  from {
    transform: skew(225deg) translate(-100%, 0%);
  }

  to {
    transform: skew(225deg) translate(0%, 0%);
  }
}

@keyframes featured-text-transition-in {
  from {
    transform: skew(225deg) translate(0%, 0%);
  }

  to {
    transform: skew(225deg) translate(100%, 0%);
  }
}

@keyframes featured-img-transition-in {
  from {
    transform: skew(135deg) translate(-150%, 0%);
  }

  to {
    transform: skew(135deg) translate(-75%, 0%);
  }
}

@keyframes featured-img-transition-out {
  from {
    transform: skew(135deg) translate(-75%, 0%);
  }

  to {
    transform: skew(135deg) translate(25%, 0%);
  }
}

@keyframes featured-waiting {
  from {
    opacity: 1;
  }

  to {
    opacity: 0.8;
  }
}

@keyframes animateGradient {
  0% {
    background-position: 0%;
  }

  100% {
    background-position: 100%;
  }
}

